# rust-monte-carlo-simulation

./: .envrc  .gitignore  Cargo.toml  README.md
devtools/: gen-sample-data.js  pg_dump.sh  psql-delete-all.sh  psql-tsv-copy-imports.sh  run-pg-docker.sh  run-psql.sh
migrations/: 20231105203308_init.sql  20231115020612_add-quantity-field-item-batchs.sql
sample/: general_conf.tsv  product.tsv  product_batch.tsv  product_props.tsv  product_simulation_summary.tsv  product_simulation_summary_by_day.tsv
src/: main.rs
src/data/: general_conf.rs  mod.rs  product_batch.rs  product_mov_hist.rs  product_props.rs  product_simulation_summary.rs  product_simulation_summary_by_day.rs
src/repository/: mod.rs
src/simulation/: control.rs  coordinator.rs  mod.rs  orchestrator.rs  parameter.rs  per_day.rs
src/simulation/control/: parameter.rs  per_day.rs
test-offset/: .envrc  Cargo.toml  exec.sh  position.avsc  position.fbs  test.tsv
test-offset/migrations/: migration.sql  queries.sql
test-offset/scripts/: gen-sample-data-t5.js  gen-sample-data.js  pg_dump.sh  psql.sh  run-mongo-docker.sh  run-pg-docker.sh  run-redis-docker.sh
test-offset/src/: avro.rs  fbs.rs  main.rs  mongo_repository.rs  msgpack.rs  pg_repository.rs  pos_avro.rs  pos_fbs.rs  position_generated.rs  redis_repository.rs
