[package]
name = "test-offset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "*"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "bigdecimal" ] }
chrono = "0.4.24"
bigdecimal = {version = "0.3.0", features = ["serde"] }
redis = "0.23.3"
rustc-hash = "1.1.0"
rmp-serde = "1.1.2"
serde = "1.0.192"
rand = "0.8.5"
