[package]
name = "test-offset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "*"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "bigdecimal" ] }
chrono = "0.4.24"
bigdecimal = {version = "0.3.0", features = ["serde"] }
redis = "0.23.3"
rmp-serde = "1.1.2"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["serde_derive"] }
apache-avro = "0.16.0"
derive_builder = "0.12.0"
serde_bytes = "0.11.12"
mongodb = "2.7.1"
bson = "2.7.0"
